updated SMTP email credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,8 @@ spring.datasource.continue-on-error=true
 #mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-#spring.mail.username=sahanscarwash@gmail.com
-#spring.mail.password=Srilanka777
-spring.mail.username= car.renting.banger@gmail.com
-spring.mail.password= Landcruiser1
+spring.mail.username=sahanscarwash@gmail.com
+spring.mail.password=uvmfnnwbupjhjmkq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 customer.support.email = washinglovesrilanka@gmail.com
