--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,11 @@ spring.datasource.continue-on-error=true
 #mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=sahanscarwash@gmail.com
-spring.mail.password=uvmfnnwbupjhjmkq
+spring.mail.username=executive.washinglove@gmail.com
+spring.mail.password=zyszkngjtinnuxdi
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-customer.support.email = washinglovesrilanka@gmail.com
+customer.support.email = executive.washinglove@gmail.com
 
 
 
